# just-md

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMAGE_PATH_SOLUTION.md  IMAGE_RETRY_FIX.md  MARKDOWN_IMAGE_DESIGN.md  NEW-UI-GUIDE.md  README.md  REQUIREMENTS.md  UI-COMPARISON.md  apply-new-ui.sh  index-new.html  index.html  package-lock.json  package.json  test-image.md  vite.config.ts  vitest.config.ts
.playwright-mcp/: page-2026-04-25T03-05-46-696Z.yml
.serena/: project.yml
src/: autoImageExtension.ts  autoSave.ts  codeFolding.ts  codeQuality.ts  commandPalette.ts  documentComparison.ts  editor.ts  editorContextMenu.ts  export.ts  fileManager.ts  filetree.ts  findReplace.ts  focusMode.ts  footnoteExtension.ts  global.d.ts  imageContextMenu.ts  imageHandler.ts  imagePathHelper.ts  imageResizeExtension.ts  layoutManager.ts  main-new.ts  main.ts  markdownImage.ts  mathExtension.ts  menu.ts  outline.ts  performance.ts  printPreview.ts  recentFiles.ts  recentFilesDialog.ts  searchExtension.ts  settings.ts  sourceEditor.ts  spellCheck.ts  splitView.ts  styles-new.css  styles.css  svgExtension.ts  tabManager.ts  tableToolbar.ts  (+7 more)
src-tauri/: Cargo.toml  my-note.md  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test/: auto-image-extension.test.ts  editor-context-menu.test.ts  file-opening.test.ts  filetree.test.ts  image-retry.test.ts  menu-settings.test.ts  outline-navigation.test.ts  outline.test.ts  settings.test.ts  setup.ts  (+3 more)
(+4 files in other folders)
