[package]
name = "just-md"
version = "0.1.0"
description = "A simple Markdown editor"
authors = ["You"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
pulldown-cmark = "0.13.0"

