[package]
name = "just-md"
version = "0.1.2"
description = "A simple Markdown editor"
authors = ["You"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = { version = "2.0.0", features = [ "windows7-compat" ] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
pulldown-cmark = "0.13.0"
base64 = "0.22"
chrono = "0.4"
dirs = "5.0"
sha2 = "0.10"

